--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
   <section id="footer" class="gradient-background">
     <div class="container ">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 ">
-        <div class="col mb-3">
-          <p class="text-body-secondary">© Tindog</p>
-        </div>
+        <a href="./index.html" class="text-body-secondary" style="text-decoration: none;">
+              © Tindog
+          </a>
     
         <div class="col mb-3">
     
